# pywebtasks

./: .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.rst  conftest.py  pyproject.toml  requirements-dev.txt  requirements-extras.txt  requirements-test.txt  requirements.txt  setup.py  test_pywebtasks.py
.tox/py27/: .tox-config1  pip-selfcheck.json
.tox/py27/local/: bin  include  lib  log
.tox/py34/: .tox-config1  pip-selfcheck.json
.tox/py34/lib/python3.4/: __pycache__  distutils
pywebtasks/: __init__.py  compat.py  langs.py  tokens.py  webtasks.py
pywebtasks.egg-info/: PKG-INFO  SOURCES.txt
test_code/: csharp.cs  javascript.js  python.py
