[tool.poetry]
name = "pywebtasks"
version = "0.1.0"
description = "A Python wrapper for Auth0's Webtasks API"
authors = ["Sebastián Seba"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
tox = "^4.6.0"
wheel = "^0.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
